# demographic-stuff

./: .gitignore  README.md  pyproject.toml
application/click/: setler.py
population_setler/: __init__.py  __main__.py
population_setler/balancer/: __init__.py  balance_result_types.py  balancer.py
population_setler/click/: __init__.py  main_group.py  setler.py
population_setler/divider/: __init__.py  divider.py
population_setler/models/: __init__.py  house.py  people_distribution.py  people_division.py  territory.py
population_setler/setler/: __init__.py  setler.py
sample_data/balancer/raw/: urbanapi_territory_{3}_physical_objects_{4}.json  urbanapi_territory_{3}_territories_without_geometry.json  urbanapi_territory_{3}_{1}_indicatorvalues_lastonly.json
sample_data/divider/: socdemo_pyramid_for_territory.json
