[tool.poetry]
name = "population-setler"
version = "0.1.0"
description = "An utility to [todo]"
authors = ["Banakh Andrei <uuetsukeu@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.8"
sqlalchemy = "^2.0.37"
numpy = "^2.2.1"

[tool.poetry.urls]
"Repository" = "https://github.com/drlinggg/demographic-stuff.git"

[tool.poetry.scripts]
population-setler = "application.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
