[tool.poetry]
name = "population-setler"
version = "0.1.0"
description = "An utility to [todo]"
authors = ["Banakh Andrei <uuetsukeu@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
sqlalchemy = "^2.0.37"
numpy = "^2.2.1"
geojson = "^3.2.0"
geojson-pydantic = "^1.2.0"
asyncio = "^3.4.3"
httpx = "^0.28.1"
rich = "^13.9.4"

[tool.poetry.urls]
"Repository" = "https://github.com/drlinggg/demographic-stuff.git"

[tool.poetry.scripts]
population-setler = "population_setler.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
